--- a/Tillson Galloway/Main.storyboard
+++ b/Tillson Galloway/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cu1-L2-RY7">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -59,6 +60,24 @@
             </objects>
             <point key="canvasLocation" x="993" y="311"/>
         </scene>
+        <!--Card Content View Controller-->
+        <scene sceneID="yjd-uh-BKq">
+            <objects>
+                <viewController id="Qy2-Qh-2c5" customClass="CardContentViewController" customModule="Tillson_Galloway" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZyO-Ed-VIJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="6V8-dX-2Fu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Oge-Qs-59m">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6id-fC-HM5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2371" y="311"/>
+        </scene>
         <!--Cabinet View Controller-->
         <scene sceneID="oB3-oL-OFX">
             <objects>
@@ -68,16 +87,52 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewLayout key="collectionViewLayout" id="r40-n7-CRN" customClass="PassbookLayout"/>
-                        <cells/>
+                        <imageView key="backgroundView" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sf" id="8oR-zM-lGA">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="header" id="uvT-L2-Far">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tillson Galloway" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zbd-eB-Ttp">
+                                            <rect key="frame" x="122" y="8" width="356" height="37"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="37" id="DqJ-88-aec"/>
+                                                <constraint firstAttribute="width" constant="356" id="URw-gn-rj7"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="31"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                            <size key="shadowOffset" width="0.0" height="0.0"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="Zbd-eB-Ttp" secondAttribute="centerX" id="PJD-3P-ERm"/>
+                                    <constraint firstItem="Zbd-eB-Ttp" firstAttribute="top" secondItem="uvT-L2-Far" secondAttribute="topMargin" id="YvC-S5-DRY"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="Zbd-eB-Ttp" secondAttribute="bottom" constant="2" id="m9U-9c-Cxf"/>
+                                </constraints>
+                                <size key="customSize" width="600" height="55"/>
+                            </collectionViewCell>
+                        </cells>
                         <connections>
                             <outlet property="dataSource" destination="8BE-Tb-hbG" id="sF9-P8-h8F"/>
                             <outlet property="delegate" destination="8BE-Tb-hbG" id="fmm-z4-Sej"/>
                         </connections>
                     </collectionView>
+                    <connections>
+                        <segue destination="Qy2-Qh-2c5" kind="show" identifier="showCard" id="7Xv-P5-s6Q"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NvZ-7y-QMO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1690" y="317"/>
+            <point key="canvasLocation" x="1690" y="311"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Slh-rG-cMc">
@@ -98,4 +153,7 @@
             <point key="canvasLocation" x="297" y="311"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="sf" width="1180" height="2120"/>
+    </resources>
 </document>
