--- a/Tillson Galloway/Main.storyboard
+++ b/Tillson Galloway/Main.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cu1-L2-RY7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cu1-L2-RY7">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -78,29 +77,29 @@
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tillson Galloway" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zbd-eB-Ttp">
-                                            <rect key="frame" x="122" y="8" width="356" height="37"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tillson Galloway" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Zbd-eB-Ttp">
+                                            <rect key="frame" x="122" y="13" width="356" height="73"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="37" id="DqJ-88-aec"/>
-                                                <constraint firstAttribute="width" constant="356" id="URw-gn-rj7"/>
+                                                <constraint firstAttribute="width" constant="356" id="RjL-94-bZl"/>
+                                                <constraint firstAttribute="height" constant="73" id="yiR-Vc-c04"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="31"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="46"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                            <size key="shadowOffset" width="0.0" height="0.0"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="shadowColor" white="0.0" alpha="0.47999999999999998" colorSpace="calibratedWhite"/>
+                                            <size key="shadowOffset" width="1" height="1"/>
                                         </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstAttribute="centerX" secondItem="Zbd-eB-Ttp" secondAttribute="centerX" id="PJD-3P-ERm"/>
-                                    <constraint firstItem="Zbd-eB-Ttp" firstAttribute="top" secondItem="uvT-L2-Far" secondAttribute="topMargin" id="YvC-S5-DRY"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="Zbd-eB-Ttp" secondAttribute="bottom" constant="2" id="m9U-9c-Cxf"/>
+                                    <constraint firstAttribute="centerY" secondItem="Zbd-eB-Ttp" secondAttribute="centerY" constant="0.5" id="TF7-cC-Yr8"/>
+                                    <constraint firstAttribute="centerX" secondItem="Zbd-eB-Ttp" secondAttribute="centerX" id="qoZ-Ht-lzG"/>
                                 </constraints>
-                                <size key="customSize" width="600" height="55"/>
+                                <size key="customSize" width="600" height="100"/>
                             </collectionViewCell>
                         </cells>
                         <connections>
