--- a/Tillson Galloway/Main.storyboard
+++ b/Tillson Galloway/Main.storyboard
@@ -89,7 +89,7 @@
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="46"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="shadowColor" white="0.0" alpha="0.47999999999999998" colorSpace="calibratedWhite"/>
+                                            <color key="shadowColor" white="0.0" alpha="0.16" colorSpace="calibratedWhite"/>
                                             <size key="shadowOffset" width="1" height="1"/>
                                         </label>
                                     </subviews>
