--- a/Tillson Galloway/View/PastWorkScroll.xib
+++ b/Tillson Galloway/View/PastWorkScroll.xib
@@ -165,6 +165,7 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="commitNumbers" destination="Zm9-H7-J6R" id="nOk-LI-Mld"/>
                 <outlet property="openSourceImage" destination="bKK-xN-suZ" id="wo7-aO-ike"/>
                 <outlet property="signedInImage" destination="hMJ-qC-OJA" id="0H3-YJ-g5u"/>
                 <outlet property="signedInTechImageView" destination="NBN-Ko-2rn" id="kAz-XR-Pur"/>
